# agenda-back

./: .gitignore  .pre-commit-config.yaml  README.md  database.db  pyproject.toml
.github/workflows/: ruff-and-pytest.yaml
agenda_back/: main.py
agenda_back/common/: config.py  dependencies.py  enums.py  exceptions.py  helpers.py  utils.py
agenda_back/db/: config.py  database.py  models.py
agenda_back/db/models/: calendar_event_models.py  user_models.py
agenda_back/helpers/: auth_helpers.py
agenda_back/models/v1/: calendar_event_schemas.py  common_models.py
agenda_back/repositories/: calendar_events_repo.py  users_repo.py
agenda_back/repositories/v1/: calendar_events_repo.py  some_repo.py  users_repo.py
agenda_back/routes/: base_routes.py  dependencies.py
agenda_back/routes/v1/: auth_routes.py  calendar_events_routes.py  some_routes.py  users_routes.py
agenda_back/schemas/: validator.py
agenda_back/schemas/v1/: auth_schemas.py  calendar_event_schemas.py  common_schemas.py  schemas.py  user_schemas.py  validator.py
agenda_back/services/v1/: auth_service.py  calendar_events_service.py  some_service.py  user_service.py  users_service.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/repositories/: test_v1_calendar_events_repo.py
tests/unit/routes/: test_health_check_route.py  test_home_route.py  test_v1_calendar_events_routes.py  test_v1_users_routes.py
tests/unit/services/: test_v1_calendar_events_service.py  test_v1_users_service.py
