[tool.poetry]
name = "agenda-back"
version = "0.1.0"
description = ""
authors = ["Horacio <horacio.chiarella@gmail.com>"]
readme = "README.md"
packages = [{include = "agenda_back"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
