[tool.poetry]
name = "agenda-back"
version = "0.1.0"
description = ""
authors = ["Horacio <horacio.chiarella@gmail.com>"]
readme = "README.md"
packages = [{include = "agenda_back"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
ruff = "^0.0.280"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.poetry.group.test.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pytest = "^7.4.0"
pytest-custom-exit-code = "^0.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.prod.dependencies]
python = "^3.10"
fastapi = "^0.100.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  "__init__.py",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
per-file-ignores = {}

line-length = 79

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

fix = true

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.flake8-import-conventions.aliases]
numpy = "np"

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 7
